crates/fig-lexer/tests/snapshots/integration_tests__control_flow__block_anon.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: with_anon_block
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Block
- Newline
- Indent
- Let
- Ident: x
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
- Dedent
