crates/fig-lexer/tests/snapshots/integration_tests__control_flow__for_basic.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: sum_range
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- For
- Ident: i
- In
- Ident: range
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- IntegerLiteral:
    base: Decimal
    digits: "10"
    suffix: ~
- RParen
- Newline
- Indent
- Pass
- Newline
- Dedent
- Dedent
- Func
- Ident: iterate_slice
- LParen
- Ident: data
- Colon
- LBracket
- I32
- RBracket
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- For
- Ident: item
- In
- Ident: data
- Newline
- Indent
- Pass
- Newline
- Dedent
- Dedent
