crates/fig-lexer/tests/snapshots/integration_tests__control_flow__if_nested.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: nested_if
- LParen
- Ident: x
- Colon
- I32
- Comma
- Ident: y
- Colon
- I32
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- If
- Ident: x
- Gt
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- If
- Ident: y
- Gt
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Pass
- Newline
- Dedent
- Else
- Newline
- Indent
- Pass
- Newline
- Dedent
- Dedent
- Else
- Newline
- Indent
- If
- Ident: y
- Lt
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Pass
- Newline
- Dedent
- Dedent
- Dedent
