crates/fig-lexer/tests/snapshots/integration_tests__control_flow__if_simple.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: check_positive
- LParen
- Ident: x
- Colon
- I32
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- If
- Ident: x
- Gt
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Pass
- Newline
- Dedent
- Dedent
